--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>🌤 TESTๆๆ</h1>
+    <h1>🌤 ระบบสภาพอากาศ IoT ☀️ </h1>
+    <p class="update-time"><span> 📅 อัปเดตล่าสุด : </span><span id="timestamp">--</span></p>
     <div class="status">
-      <p>☀ แสง: <span id="light">--</span> lux</p>
-      <p>🌡 อุณหภูมิ: <span id="temp">--</span> °C</p>
-      <p>💧 ความชื้น: <span id="humidity">--</span> %</p>
+      <p><span> 💡 แสง : </span> <span id="light"></span> <span id="light"> lux </span> ( <span id="light-status"></span> ) </p>
+      <p><span> 🌡 อุณหภูมิ : </span> <span id="temp"></span> <span> °C </span> ( <span id="temp-status"></span>) </p>
+      <p><span> 💧 ความชื้น : </span><span id="humidity"></span> <span> % </span>( <span id="humidity-status"></span> )</p>
+      <p><strong> 🌧️ พยากรณ์ฝน :  </strong> <span id="rain-forecast"></span></p>      
     </div>
-    <p class="update-time">อัปเดตล่าสุด: <span id="timestamp">--</span></p>
   </div>
   <script src="script.js"></script>
 </body>
