--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,8 +18,8 @@
 
   <!-- วันและเวลา -->
   <section class="section datetime-box">
-    <p><span>📅 วันล่าสุด: </span> <span id="datestamp">--</span></p>
-    <p><span>⌚ เวลาล่าสุด: </span><span id="timestamp">--</span></p>
+    <p><span class="bold-text">📅 วันล่าสุด : </span> <span id="datestamp">--</span></p>
+    <p><span class="bold-text">⌚ เวลาล่าสุด : </span><span id="timestamp">--</span></p>
   </section>
 
   <!-- ค่าจากเซ็นเซอร์ -->
