--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,8 @@
 
   <!-- หัวข้อโปรเจกต์ -->
   <section class="section header">
-    <h1>ระบบพยากรณ์อากาศอัจฉริยะ ด้วย AI และ IoT</h1>
-    <h2>ตรวจสอบและวิเคราะห์สภาพอากาศแบบเรียลไทม์ พร้อมแจ้งเตือนผ่าน LINE</h2>
+    <h1>ระบบพยากรณ์อากาศอัจฉริยะ ด้วย AI</h1>
+    <h2>ตรวจสอบและวิเคราะห์สภาพอากาศแบบเรียลไทม์</h2>
   </section>
 
   <!-- วันและเวลา -->
