--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html lang="th">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ระบบพยากรณ์อากาศอัจฉริยะ ด้วย AI</title>
+  <title>ระบบพยากรณ์อากาศอัจฉริยะ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-
-  <!-- หัวข้อโปรเจกต์ -->
-  <section class="section header">
-    <h1>ระบบพยากรณ์อากาศอัจฉริยะ ด้วย AI</h1>
-    <h2>ตรวจสอบและวิเคราะห์สภาพอากาศแบบเรียลไทม์</h2>
-  </section>
-
-  <!-- วันและเวลา -->
-  <section class="section datetime-box">
-    <p class="date-text"><span class="bold-text">📅 วันล่าสุด : </span> <span id="datestamp">--</span></p>
-    <p class="date-text"><span class="bold-text">⌚ เวลาล่าสุด : </span><span id="timestamp">--</span></p>
-  </section>
-
-  <!-- ค่าจากเซ็นเซอร์ -->
-  <section class="sensor-wrapper">
-    <div class="sensor-card">
-      <h2>💡 แสง</h2>
-      <p><span id="light">--</span> <span class="unit">lux</span></p>
-      <p id="light-status" class="status-text">--</p>
+  <div class="container">
+    <!-- เวลากลางบน -->
+    <div class="datetime-card glass">
+      <h1>⏰ เวลาปัจจุบัน</h1>
+      <h1>🕒 <span id="timestamp">--</span></h1>
+      <h2>📅 <span id="datestamp">--</span></h2>
     </div>
-    <div class="sensor-card">
-      <h2>🌡️ อุณหภูมิ</h2>
-      <p><span id="temp">--</span> <span class="unit">°C</span></p>
-      <p id="temp-status" class="status-text">--</p>
-    </div>
-    <div class="sensor-card">
-      <h2>💧 ความชื้น</h2>
-      <p><span id="humidity">--</span> <span class="unit">%</span></p>
-      <p id="humidity-status" class="status-text">--</p>
-    </div>
-  </section>
 
-  <!-- ถาม AI -->
-  <section class="section ai-box">
-    <h2>💬 ถาม AI เกี่ยวกับสภาพอากาศ</h2>
-    <div class="ai-container">
-      <div class="ai-answer-box" id="ai-answer">--</div>
-      <div class="ai-form">
-        <input type="text" id="user-question" placeholder="เช่น ควรตากผ้าไหมวันนี้?" />
-        <button onclick="askAI()">ถาม AI</button>
+    <!-- ค่าจากเซนเซอร์ -->
+    <div class="grid-info">
+      <div class="card glass">
+        <h2>🌡 อุณหภูมิ</h2>
+        <p><span id="temp">--</span> °C</p>
+        <p id="temp-status">--</p>
+      </div>
+      <div class="card glass">
+        <h2>💧 ความชื้น</h2>
+        <p><span id="humidity">--</span> %</p>
+        <p id="humidity-status">--</p>
+      </div>
+      <div class="card glass">
+        <h2>💡 แสง</h2>
+        <p><span id="light">--</span> lux</p>
+        <p id="light-status">--</p>
+      </div>
+
+      <!-- 🔎 กล่องแสดงคำแนะนำอัตโนมัติ (ไม่เกี่ยวกับแชท) -->
+      <div class="card glass">
+        <h3>🤖 คำแนะนำจาก AI</h3>
+        <p id="ai-summary">--</p>
       </div>
     </div>
-  </section>
+
+    <!-- กล่องแชท -->
+    <div class="chat-box glass">
+      <h2>💬 ถาม AI เกี่ยวกับสภาพอากาศ</h2>
+      <div class="chat-messages" id="chat-messages">
+        <!-- ระบบแชทจะเติมข้อความตรงนี้ -->
+      </div>
+      <div class="chat-input">
+        <input type="text" id="user-question" placeholder="พิมพ์ เช่น ตอนนี้ควรตากผ้าไหม?" />
+        <button onclick="askAI()">📤</button>
+      </div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
